regression/parse_pool/progtest19.sfp.out

sfc in program parse_pool/progtest19.sfp
syntax error at line 2, position 53:
configuration hello { nullApp() nullNet() nullMac() start() } 
                                                    ^
